@@ -95,6 +95,7 @@ $_lang['pdotools_prop_maxLimit'] = 'Максимально возможный л
 $_lang['pdotools_prop_page'] = 'Номер страницы для вывода. Перекрывается номером, указанным пользователем через url.';
 $_lang['pdotools_prop_pageLimit'] = 'Количество ссылок на страницы. Если больше или равно 7 - включается продвинутый режим отображения.';
 $_lang['pdotools_prop_pageNavVar'] = 'Имя плейсхолдера для вывода пагинации.';
+$_lang['pdotools_prop_pageCountVar'] = 'Имя плейсхолдера для вывода количества страниц.';
 $_lang['pdotools_prop_pageVarKey'] = 'Имя переменной для поиска номера страницы в url.';
 $_lang['pdotools_prop_plPrefix'] = 'Префикс для выставляемых плейсхолдеров, по умолчанию пуст.';
 
